⛑️[FIX] : all & empty filter